# object_management

./: CMakeLists.txt  package.xml
action/: LookAtObject.action  ObjectDetection.action  ObjectDetections.action
config/: object_management.yaml
launch/: darknet_ros.launch  merge_topics_to_one.launch
scripts/: ObjectManagement.py  ObjectManagementNode.py  ObjectManagementNodeTestAction.py  kinectTopicTranslator.py
src/: merge_topics_to_one.cpp  merge_topics_to_one.cpp.sav
srv/: ConfigureFLowSwitcherService.srv
